Fixed navbar login update using event broadcasting. Not the best solution, but it works...

--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "start-dev": "DEBUG=astir_web:server nodemon ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "~4.6.1",
+    "npm": "~2.15.9"
+  },
   "author": "Bruno Alexis Faúndez Valenzuela",
   "license": "ISC",
   "dependencies": {
