--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "cors": "^2.8.1",
     "debug": "^2.2.0",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
