--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "express-jwt": "^5.1.0",
+    "jsonapi-query-parser": "^1.3.1",
     "jsonwebtoken": "^7.1.9",
     "mongoose": "^4.6.5",
     "morgan": "^1.7.0",
