--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Bruno Alexis Faúndez Valenzuela",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.66.0",
     "body-parser": "^1.15.2",
     "cors": "^2.8.1",
     "debug": "^2.2.0",
@@ -26,6 +27,7 @@
     "mongoose": "^4.6.5",
     "morgan": "^1.7.0",
     "multer": "^1.3.0",
+    "multer-s3": "^2.7.0",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0"
